infra/kubernetes/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: react-service
  namespace: production-react

spec:
  ports:
  - name: react-port-80
    port: 80
    protocol: TCP
    targetPort: 80
  selector:
    app: react
