infra/kubernetes/ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: react-ingress
  namespace: production-react

spec:
  rules:
  - host: a55bc28ae442011ea822c0e1966265f7-1832647378.us-east-1.elb.amazonaws.com
    http:
      paths:
      - backend:
          serviceName: react-service
          servicePort: 80
